--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       selenium:
         condition: service_healthy
     environment:
-      - SELENIUM_URL=http://selenium:4444/wd/hub
+      - SELENIUM_URL=http://127.0.0.1:4444
     volumes:
       - ./results:/app/results
 
@@ -18,7 +18,7 @@ services:
     ports:
       - "4444:4444"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4444/wd/hub/status"]
+      test: ["CMD", "curl", "-f", "http://localhost:4444"]
       interval: 10s
       timeout: 10s
       retries: 5
